--- a/gradient_boost/gradient_boost.ipynb
+++ b/gradient_boost/gradient_boost.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,12 +19,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import data and split into train/test sets\n",
-    "news_df = pd.read_csv('../../data/news_classification.csv')\n",
+    "news_df = pd.read_csv('../data/news_classification.csv')\n",
     "xFeat = news_df.drop('high_popularity', axis=1)\n",
     "y = news_df['high_popularity']\n",
     "xTrain, xTest, yTrain, yTest = train_test_split(xFeat, y, test_size=0.3, random_state=42)"
@@ -32,15 +32,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RandomForestClassifier: 0.6986990789098851\n",
-      "GradientBoostingClassifier: 0.7119931630424461\n",
+      "RandomForestClassifier: 0.6955654733643528\n",
+      "GradientBoostingClassifier: 0.7120881207862502\n",
       "AdaBoostClassifier: 0.7040167125629095\n"
      ]
     }
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -256,6 +256,7 @@
     }
    ],
    "source": [
+    "\n",
     "# Final hypertuned model\n",
     "model = GradientBoostingClassifier(learning_rate=best_learning_rate, n_estimators=best_n_estimators, max_depth=best_max_depth, min_samples_split=best_min_samples_split, min_samples_leaf=best_min_samples_leaf)\n",
     "model.fit(xTrain, yTrain)\n",
